# pathofexileTrade

./: .env.example  README.md  config.py  pathofexileTrade.py  poecrawler.ipynb  poecrawler.py  pyproject.toml  request爬取官方市集_測試上傳.py  requirements.txt
